# Woods

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  setup.py  test.py
examples/: Image restoration.ipynb
rust/: Cargo.toml  requirements-dev.txt  test.py
rust/src/: boosting.rs  deep_boosting.rs  ensemble.rs  estimator.rs  lib.rs  numerics.rs  rule.rs  serialization.rs  tree.rs
rust/src/ensemble/: boosting.rs  deep_boosting.rs  mod.rs
rust/src/tree/: mod.rs  rule.rs
rust/src/utils/: array.rs  mod.rs  numerics.rs  serialization.rs
src/: check.hpp  checks.hpp  estimator.rs  interface.hpp  interfaces.hpp  python.cpp  utils.hpp  woods.cpp
src/ensemble/: boosting.hpp  boosting.rs  mod.rs
src/tree/: impurity.hpp  mod.rs  rule.hpp  rule.rs  split.hpp  tree.hpp
src/trees/: tree.hpp
src/utils/: array.rs  numerics.rs
