[package]
name = "woods"
version = "0.1.0"
authors = ["Andrei V. Konstantinov <andrue.konst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "woods"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.9.0"
ndarray = "0.13"
# ndarray = { version = "0.13", features = ["rayon"] }
rand = "0.7.3"
average = "0.10.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.2"
ndarray-stats = "0.3"
itertools = "0.9"
rayon = "1.1"

[dependencies.pyo3]
version = "0.10.0"
features = ["extension-module"]